Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/6967002/T6967002.out
T6967002.java:10:22: compiler.err.expected: ')'
1 error
